utp/compII/toscal/tests/semantic/success/test-known-hash-collision.pas
program test_the_damn_hash_collision;
var nota2, media, k : integer;
begin
	nota2 := 3;
	media := 4;
	write(nota2 * -1, media * 100);
end.
